Fixed Component Pathing
-fixed python naming conventions
-added an id_card property to
-Fixed component pathing to be local to page
-fixed misplaced components
-fixed searchbar and tabs non responsiveness

--- a/client/package.json
+++ b/client/package.json
@@ -14,5 +14,9 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "theme": {
+    "primary-color": "47798A",
+    "font-family": "Montserrat"
   }
 }
