Network Request Test

--- a/client/package.json
+++ b/client/package.json
@@ -18,5 +18,7 @@
   "theme": {
     "primary-color": "47798A",
     "font-family": "Montserrat"
-  }
+  },
+  "proxy": "http://localhost:9000/"
 }
+
