--- a/client/package.json
+++ b/client/package.json
@@ -7,7 +7,8 @@
     "react-dom": "^16.3.2",
     "react-scripts": "1.1.4",
     "react-icons-kit": "latest",
-    "antd": "latest"
+    "antd": "latest",
+    "rc-form": "latest"
   },
   "scripts": {
     "start": "react-scripts start",
