--- a/client/package.json
+++ b/client/package.json
@@ -3,12 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "antd": "latest",
+    "rc-form": "latest",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
-    "react-scripts": "1.1.4",
     "react-icons-kit": "latest",
-    "antd": "latest",
-    "rc-form": "latest"
+    "react-native": "latest",
+    "react-scripts": "1.1.4",
+    "react-table": "^6.8.6"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -22,4 +24,3 @@
   },
   "proxy": "http://localhost:9000/"
 }
-
