--- a/client/package.json
+++ b/client/package.json
@@ -13,7 +13,8 @@
     "react-native": "latest",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
-    "react-table": "^6.8.6"
+    "react-table": "^6.8.6",
+    "react-to-print": "^2.0.0-alpha-4"
   },
   "scripts": {
     "start": "react-scripts start",
