--- a/client/package.json
+++ b/client/package.json
@@ -3,22 +3,23 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@opuscapita/react-perfect-scrollbar": "^3.0.3",
+    "@opuscapita/react-perfect-scrollbar": "^3.0.4",
     "antd": "latest",
     "chart.js": "^2.7.3",
     "moment": "latest",
+    "prop-types": "^15.6.2",
     "rc-form": "latest",
-    "react": "^16.6.3",
+    "react": "^16.7.0",
     "react-chartjs": "latest",
     "react-chartjs-2": "^2.7.4",
     "react-charts": "latest",
-    "react-dom": "^16.4.1",
+    "react-dom": "^16.7.0",
     "react-icons-kit": "latest",
     "react-native": "latest",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "1.1.4",
+    "react-scripts": "2.1.3",
     "react-table": "^6.8.6",
-    "react-to-print": "^2.0.0-alpha-4"
+    "react-to-print": "^2.0.0-alpha-6"
   },
   "scripts": {
     "start": "react-scripts start",
