--- a/client/package.json
+++ b/client/package.json
@@ -1,40 +1,53 @@
 {
-  "name": "client",
+  "name": "lyve-web-client",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@opuscapita/react-perfect-scrollbar": "^3.0.3",
-    "antd": "latest",
+    "@material-ui/core": "^3.7.1",
+    "@material-ui/icons": "^3.0.1",
+    "@opuscapita/react-perfect-scrollbar": "^3.0.4",
+    "antd": "^3.13.1",
+    "axios": "^0.18.0",
     "chart.js": "^2.7.3",
-    "moment": "latest",
-    "rc-form": "latest",
-    "react": "^16.6.3",
-    "react-chartjs": "latest",
+    "latest": "^0.2.0",
+    "material-ui": "^0.20.2",
+    "material-ui-pickers": "^2.1.1",
+    "prop-types": "^15.6.2",
+    "react": "^16.7.0",
     "react-chartjs-2": "^2.7.4",
-    "react-charts": "latest",
-    "react-dom": "^16.4.1",
-    "react-icons-kit": "latest",
-    "react-native": "latest",
+    "react-custom-scrollbars": "^4.2.1",
+    "react-dom": "^16.7.0",
+    "react-icons-kit": "^1.2.1",
+    "react-plyr": "^2.1.1",
+    "react-redux": "^6.0.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "^2.1.3",
-    "react-table": "^6.8.6",
-    "react-to-print": "^2.0.0-alpha-4"
+    "react-swipeable-views": "^0.13.1",
+    "react-text-mask": "^5.4.3",
+    "react-to-print": "^2.0.0-alpha-6",
+    "react-window-size-listener": "^1.2.3",
+    "recompose": "^0.30.0",
+    "typeface-lato": "0.0.54",
+    "typeface-noto-sans": "0.0.54",
+    "typeface-open-sans": "0.0.54",
+    "typeface-roboto": "0.0.54"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
+    "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "theme": {
-    "primary-color": "47798A",
-    "font-family": "Montserrat"
+  "eslintConfig": {
+    "extends": "react-app"
   },
-  "proxy": "http://localhost:9000/",
   "browserslist": [
     ">0.2%",
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "redux": "^4.0.1"
+  }
 }
