added dayoff information when adding shuttles
- added information about dayoffs of shuttles when adding a newshuttles.
- add shuttle modal UI is bad because of list.
- TODO fix UI

--- a/.gitignore
+++ b/.gitignore
@@ -97,3 +97,7 @@ db.sqlite3
 .vscode/settings.json
 .vscode/launch.json
 .vscode/settings.json
+*.jpg
+*.png
+.vscode/launch.json
+.vscode/settings.json
