--- a/client/package.json
+++ b/client/package.json
@@ -9,12 +9,14 @@
     "moment": "latest",
     "rc-form": "latest",
     "react": "^16.6.3",
+    "react-addons-update": "^15.6.2",
     "react-chartjs": "latest",
     "react-chartjs-2": "^2.7.4",
     "react-charts": "latest",
     "react-dom": "^16.4.1",
     "react-icons-kit": "latest",
     "react-native": "latest",
+    "react-number-format": "^4.0.6",
     "react-router-dom": "^4.3.1",
     "react-scripts": "^2.1.3",
     "react-table": "^6.8.6",
