Revert "Revert "Merge branch 'master' of https://github.com/rjdeniega/project-crossroad""
This reverts commit 34acb410ae86268dce2c63e1568affd6a9689869.

--- a/client/package.json
+++ b/client/package.json
@@ -4,24 +4,25 @@
   "private": true,
   "dependencies": {
     "@opuscapita/react-perfect-scrollbar": "^3.0.3",
-    "antd": "latest",
+    "antd": "^3.13.6",
     "chart.js": "^2.7.3",
     "lodash": "^4.17.11",
+    "latest": "^0.2.0",
     "moment": "latest",
-    "rc-form": "latest",
-    "react": "^16.6.3",
+    "rc-form": "^2.4.2",
+    "react": "^16.8.3",
     "react-addons-update": "^15.6.2",
     "react-chartjs": "latest",
     "react-chartjs-2": "^2.7.4",
     "react-charts": "latest",
-    "react-dom": "^16.4.1",
+    "react-dom": "^16.8.3",
     "react-icons-kit": "latest",
-    "react-native": "latest",
+    "react-native": "^0.58.5",
     "react-number-format": "^4.0.6",
     "react-router-dom": "^4.3.1",
     "react-scripts": "^2.1.5",
-    "react-table": "^6.8.6",
-    "react-to-print": "^2.0.0-alpha-6"
+    "react-table": "^6.9.2",
+    "react-to-print": "^2.0.0-beta-4"
   },
   "scripts": {
     "start": "react-scripts start",
