--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@amcharts/amcharts4": "^4.1.14",
     "@opuscapita/react-perfect-scrollbar": "^3.0.3",
     "antd": "^3.13.6",
     "chart.js": "^1.1.1",
