--- a/client/package.json
+++ b/client/package.json
@@ -21,7 +21,8 @@
     "react-router-dom": "^4.3.1",
     "react-scripts": "^2.1.8",
     "react-table": "^6.9.2",
-    "react-to-print": "^2.0.0-beta-4"
+    "react-to-print": "^2.0.0-beta-4",
+    "react-year-picker": "^0.3.7"
   },
   "scripts": {
     "start": "react-scripts start",
